Support actual shapefile export of simple layers